--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 <div class = "login-background">
     <div class = "login-form">
         <h1>Вам нужна помощь?</h1>
-        <input type = "text" class = "form-control" placeholder = "Имя пользователя"/>
-        <input type = "text" class = "form-control" placeholder = "Пароль"/>
+        <input type = "text" id = "username" class = "form-control" placeholder = "Имя пользователя"/>
+        <input type = "password" id = "password" class = "form-control" placeholder = "Пароль"/>
         <div class = 'buttons'>
             <div class = 'login-button positive'>Да</div>
             <div class = 'login-button negative'>Нет</div>
