--- a/css/task.css
+++ b/css/task.css
@@ -1,4 +1,4 @@
-.task-list{
+.task-list {
     margin-top: 60px;
     margin-left: 60px;
 }
@@ -19,10 +19,10 @@
     font-weight: 900;
 }
 
-.task header{
+.task header {
     height: 5px;
     width: 300px;
-    background: rgb(255,220,100);
+    background: rgb(255, 220, 100);
     margin-left: -10px;
     margin-top: -10px;
 }
