--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,6 @@ input:focus {
     border: 1px solid rgb(177, 177, 177);
     outline: none;
     min-width: 280px;
-    min-height: 100px;
-    max-height: 150px;
     max-width: 280px;
+    height: 250px;
 }
