--- a/templates/task.html
+++ b/templates/task.html
@@ -1,4 +1,4 @@
-<section class='task'>
+<!--<div style="background: url('resources/newtask.png')">--><section class='task'>
     <header></header>
     <h3>{{ task.title }}</h3>
 
