--- a/templates/task.html
+++ b/templates/task.html
@@ -1,6 +1,7 @@
-<!--<div style="background: url('resources/newtask.png')">--><section class='task'>
-    <header></header>
-    <h3>{{ task.title }}</h3>
-
-    <div> {{ task.content.slice(0, 120) }}</div>
-</section>
+<header>
+    <h4># {{ data.id }}</h4>
+    <div class = "glyphicon glyphicon-remove-circle close-button"></div>
+</header>
+<footer>
+    <span>Комментарии : </span>
+</footer>
