--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,7 @@
         <input type="password" id="password" placeholder="Пароль"/>
 
         <div class='buttons'>
-            <div class='login-button positive'>Да</div>
-            <div class='login-button negative'>Нет</div>
+            <div class='login-button positive'>Войти</div>
         </div>
     </div>
 </div>
