--- a/templates/task.html
+++ b/templates/task.html
@@ -1,21 +1,28 @@
 <header>
     <h4># {{ data.id }}</h4>
     <div class = "glyphicon glyphicon-remove-circle close-button"></div>
+    <div ng-class = "{ hidden : profile[0].role != 'department chief'}" class = "glyphicon glyphicon-pencil edit-button"></div>
 </header>
-<p>{{ data.content }}</p>
-Назначены :  <span> {{ onWork }} </span>
+<p class = 'content-container'>{{ data.content }}</p>
+<textarea class = 'content-edit' ng-model = "data.content"></textarea>
+Назначены :  <span ng-class = "{hidden : data.helper_ids.length != 0}"> Никто не назначен </span>
+             <span ng-repeat = "helper in helpers"> {{ helper.displayname }}
+                 <span ng-class = "{ hidden : profile[0].role != 'department chief'}" ng-click = "removeHelper(helper.id)" class = "glyphicon glyphicon-remove-circle"></span>
+             </span>
 <p ng-class = '{ hidden : profile[0].role != "department chief" }'>Отдел : <select ng-model="selectedSubDep" ng-options = 'uni.id as uni.name for uni in subDeps' ng-change='getUsersBySubDep()'></select>
 Исполнитель : <select ng-model="selectedUser" ng-options = 'uni.id as uni.displayname for uni in users'></select>
 <span class="glyphicon glyphicon-plus-sign add-helper" ng-click = 'addHelperToTask()'></span></p>
 <footer>
     <div>Комментарии ({{ comments.length }}):</div>
     <div class = 'comments-container'>
-        <div ng-repeat = 'co in comments'>
+        <div ng-repeat = 'co in comments' style="position: relative">
             <b>{{ co.displayname }}: </b>
             <span>{{ co.content }}</span>
+            <div class = "glyphicon glyphicon-remove-circle comment-remove" ng-click = "removeComment(co.id)"></div>
         </div>
     </div>
     <textarea class = 'comment-content' ng-model = 'ncomment'></textarea>
     <button class="btn btn-info" ng-click = 'saveComment()'>Добавить комментраий</button>
     <button ng-class = "{ hidden : profile[0].role != 'client' && profile[0].role != 'department chief' }" class="btn btn-success" ng-click = 'closeTask()'>Закрыть заявку</button>
+    <button ng-class = "{ hidden : profile[0].role != 'department chief'}" class="btn btn-danger" ng-click = "removeTask()">Удалить заявку</button>
 </footer>
