--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,10 @@
         <h1>Вам нужна помощь?</h1>
         <input type="text" id="username" placeholder="Имя пользователя"/>
         <input type="password" id="password" placeholder="Пароль"/>
-
+        <div class = 'error'>Неверное имя пользователя или пароль</div>
         <div class='buttons'>
             <div class='login-button positive'>Войти</div>
         </div>
+
     </div>
 </div>
