--- a/css/main.css
+++ b/css/main.css
@@ -338,3 +338,24 @@ aside {
 .opened-subdep .button-save, .opened-task-type .button-save, .new-subdep .button-save, .new-task-type .button-save {
     margin-top: 20px;
 }
+
+.error-block {
+    background: rgba(0, 0, 0, 0.65);
+    color: white;
+    width: 350px;
+    height: 100px;
+    padding: 20px;
+    position: fixed;
+    z-index: 5000;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+}
+
+.role-edit {
+    display: none;
+}
+
+.edit-field {
+    display: none;
+}
