--- a/css/main.css
+++ b/css/main.css
@@ -343,7 +343,7 @@ aside {
     background: rgba(0, 0, 0, 0.65);
     color: white;
     width: 350px;
-    height: 100px;
+    height: auto;
     padding: 20px;
     position: fixed;
     z-index: 5000;
