--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
     <p>Профиль создан : {{ parseDate(data.createdAt) }}</p>
     <p>Профиль обновлен : {{ parseDate(data.updatedAt) }}</p>
     <p>Роль : {{ dictRoles[data.role] }}</p>
-    <button class = "edit-role">Изменить роль</button>
+    <button class = "edit-role" ng-class = "{ hidden : profile[0].role != 'department chief'}">Изменить роль</button>
     <div class = "role-edit">
         <p>Установить роль : <select ng-model="selectedRole" ng-options = 'uni.id as uni.name for uni in roles'></select>
         <p ng-class = '{ hidden : selectedRole != 1 }'>Указать факультет: <select  ng-model="selectedUniDep" ng-options = 'uni.id as uni.name for uni in uniDeps'></select>
@@ -22,9 +22,3 @@
         <p><button class = "btn btn-success" ng-click="saveChanges('role')">Сохранить</button>
     </div>
 </div>
-
-
-<!--<p>Email : {{ data.email }}</p>-->
-<!--<button class = "btn btn-danger" ng-click = 'removeProfile()'>Удалить профиль</button>
-<button class = 'btn btn-success' ng-click = 'saveProfile()'>Сохранить изменения</button>-->
-
